--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <br><br><br>
   <div>
     <h2>iRoT - interactive Rotations Test</h2>
-    <a href="task_online.html">Teste Novo</a> salvo online.
+    <a href="task_online.html">Teste não tão novo</a> salvo online.
     <br>
-    <a href="task_local.html">Teste Novo(wip)</a> salvo offline.
+    <a href="task_local.html">Teste Novo(wip)</a> salvo online e/ou offline.
     <br>
     <br>
     <br>
