--- a/task_local.html
+++ b/task_local.html
@@ -123,7 +123,9 @@
   </section>
   <button id="next_stage_button" onclick="nextStage()">nextStage(WIP)</button>
     
-
-  <br>Updated 20/02/2023
+  <br>
+  <div style="position:sticky; bottom:0; ">
+    Updated 24/02/2023
+  </div>
 </body>
 </html>
