--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
+  <br>
   <h1><a href="https://rodrigocns.github.io">Página de rodrigocns</a></h1>
   <p>Hospedado por GitHub Pages @ <a href="https://github.com/rodrigocns/rodrigocns.github.io">rodrigocns.github.io</a>    :)</p>
   <br><br><br>
   <div>
-    <h2>iRoT - interactive Rotations Test</h2>
-    <a href="task_online.html">Teste não tão novo</a> salvo online.
+    <h2>iRT - interactive Rotations Test</h2>
     <br>
-    <a href="task_local.html">Teste Novo(wip)</a> salvo online e/ou offline.
+    <a href="iRT.html">Clique aqui!</a> (salvo online e/ou offline).
     <br>
     <br>
     <br>
     <h2>Arquivo/Misc.</h2>
-    <a href="task_old.html">Teste Velho</a>
+    <a href="task_pre-git(OLD).html">Versão manual</a> (2020?)
+    <a href="task_online(2022).html">iRT online</a> (2022)
     <a href="teste.html">Teste</a>
     <a href="teste2.html">Teste2</a>
   </div>
