Fix load order bug

--- a/iRT.html
+++ b/iRT.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="css/w3.css">
   <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
   <script type="text/javascript" src="object_configs.js"></script>
-  <script src="scripts.js"></script>
-
+  
 </head>
 
 <body>
@@ -127,5 +126,6 @@
   <div style="position:sticky; bottom:0; ">
     Updated 24/02/2023
   </div>
+  <script src="scripts.js"></script> <!--precisa carregar por último, usa alguns elementos da própria página-->
 </body>
 </html>
