--- a/iRT.html
+++ b/iRT.html
@@ -111,8 +111,8 @@
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Pular estágio</button>
 
   <br>
-  <div style="position:sticky; bottom:0; ">
-    Updated 25/02/2023
+  <div style="position:sticky; bottom:0; font-size:x-small; ">
+    Updated 26/02/2023
   </div>
   <script src="scripts.js"></script> <!--precisa carregar por último, usa alguns elementos da própria página-->
 </body>
