Swap image for jmol obj. pt1
Passing jmol objects as arguments in functions to enable the functions use in multiple objetcs.

--- a/iRT.html
+++ b/iRT.html
@@ -35,12 +35,12 @@
           <!-- <li><a href="#tab_tabela">Tabela</a></li> WIP -->
         </ul>
         <div> <!-- iniciar as diferentes tarefas do teste interativo-->
-          <button onclick="task_n=0;prepMolecula(task_n)">1</button>
-          <button onclick="task_n=1;prepMolecula(task_n)">2</button>
-          <button onclick="task_n=2;prepMolecula(task_n)">3</button>
-          <button onclick="task_n=3;prepMolecula(task_n)">4</button>
-          <button onclick="task_n=4;prepMolecula(task_n)">5</button>
-          <button onclick="task_n=5;prepMolecula(task_n)">6</button>
+          <button onclick="task_n=0;prepMolecula(task_n,jsmol_molecula)">1</button>
+          <button onclick="task_n=1;prepMolecula(task_n,jsmol_molecula)">2</button>
+          <button onclick="task_n=2;prepMolecula(task_n,jsmol_molecula)">3</button>
+          <button onclick="task_n=3;prepMolecula(task_n,jsmol_molecula)">4</button>
+          <button onclick="task_n=4;prepMolecula(task_n,jsmol_molecula)">5</button>
+          <button onclick="task_n=5;prepMolecula(task_n,jsmol_molecula)">6</button>
         </div>
         <hr>
       </nav>
@@ -93,9 +93,9 @@
         </td>
         <td class="JSmol_canvas" id="cellRight"> <!--ajustar app para meio-->
           <script>
-            // Info.width=Info.height=400; 
-            Info.src="models/pseudobatracotoxin_molecule.xyz";     // start at: moveto {-666 39 745 139.54} 
-            Jmol.getApplet("jsmol_molecula", Info);
+            // InfoB.width=InfoB.height=400; 
+            Info_interactive.src="models/pseudobatracotoxin_molecule.xyz";     // start at: moveto {-666 39 745 139.54} 
+            Jmol.getApplet("jsmol_molecula", Info_interactive);
           </script>
         </td>
       </tr>
