--- a/iRT.html
+++ b/iRT.html
@@ -100,7 +100,7 @@
         </td>
       </tr>
     </table>
-    <div class="debug" id=jsmol_molecula_console>Console (wip)</div>
+    <div id=jsmol_molecula_console class="debug">Console (wip)</div>
     
   </section>
   <section id="tab_fim" class="stage" style="display:none"> <!-- Texto de agradecimento e etc. -->
