--- a/iRT.html
+++ b/iRT.html
@@ -35,12 +35,12 @@
           <!-- <li><a href="#tab_tabela">Tabela</a></li> WIP -->
         </ul>
         <div> <!-- iniciar as diferentes tarefas do teste interativo-->
-          <button onclick="task_n=0;prepMolecula(task_n,jsmol_molecula)">1</button>
-          <button onclick="task_n=1;prepMolecula(task_n,jsmol_molecula)">2</button>
-          <button onclick="task_n=2;prepMolecula(task_n,jsmol_molecula)">3</button>
-          <button onclick="task_n=3;prepMolecula(task_n,jsmol_molecula)">4</button>
-          <button onclick="task_n=4;prepMolecula(task_n,jsmol_molecula)">5</button>
-          <button onclick="task_n=5;prepMolecula(task_n,jsmol_molecula)">6</button>
+          <button onclick="task_n=0;prepMolecula(task_n)">1</button>
+          <button onclick="task_n=1;prepMolecula(task_n)">2</button>
+          <button onclick="task_n=2;prepMolecula(task_n)">3</button>
+          <button onclick="task_n=3;prepMolecula(task_n)">4</button>
+          <button onclick="task_n=4;prepMolecula(task_n)">5</button>
+          <button onclick="task_n=5;prepMolecula(task_n)">6</button>
         </div>
         <hr>
       </nav>
@@ -56,7 +56,7 @@
         <!-- Template: Texto no Html: <input name="header da coluna no gsheets" type="tipo do input"> -->
         Nome: <input name="fname" type="text" placeholder="Ex: Rodrigo Alves" size="30" autofocus><br>
         Email: <input name="email" type="email" placeholder="Ex: rodrigo@gmail.com" size="30"><br>
-        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)" > Salvar cópia local dos dados<br>
+        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Salvar cópia local dos dados<br>
         <!-- talvez adicionar opção auto, que tenta salvar local se online não deu certo -->
         
         <!-- valores internos a serem enviados pelo forms -->
@@ -68,7 +68,7 @@
         <input name="fz" type="hidden" id="fz" >
         <input name="fw" type="hidden" id="fw" >
       </form>
-      <button onclick="nextStage()">Próximo</button>
+      <button onclick="nextStage();prepMolecula(task_n)">Próximo</button>
     </div>
   </section>
   <section id="tab_teste" class="stage" style="display:none">  <!-- Tarefas interativas JSmol -->
@@ -76,6 +76,11 @@
     <table id="iRT_canvas_table"> <!--as bordas em css ajudam na formatacao, posso tirar no final-->
       <tr>
         <td class="JSmol_canvas" id="cellLeft">
+          <!-- <script>
+            Info_interactive.src="models/pseudobatracotoxin_molecule.xyz";     // start at: moveto {-666 39 745 139.54} 
+            Jmol.getApplet("jsmol_reference", Info_interactive);
+          </script>
+        -->
           <img id="modelo_estatico" src="imgs/batracoisa_0.png"/>
         </td>
         <td id="tdCenter">
@@ -93,7 +98,6 @@
         </td>
         <td class="JSmol_canvas" id="cellRight"> <!--ajustar app para meio-->
           <script>
-            // InfoB.width=InfoB.height=400; 
             Info_interactive.src="models/pseudobatracotoxin_molecule.xyz";     // start at: moveto {-666 39 745 139.54} 
             Jmol.getApplet("jsmol_molecula", Info_interactive);
           </script>
