Implement jmol object as reference
The left image (task reference) now is another jmol object. No more image upload!

--- a/iRT.html
+++ b/iRT.html
@@ -76,12 +76,12 @@
     <table id="iRT_canvas_table"> <!--as bordas em css ajudam na formatacao, posso tirar no final-->
       <tr>
         <td class="JSmol_canvas" id="cellLeft">
-          <!-- <script>
+          <script>
             Info_interactive.src="models/pseudobatracotoxin_molecule.xyz";     // start at: moveto {-666 39 745 139.54} 
-            Jmol.getApplet("jsmol_reference", Info_interactive);
+            Jmol.getApplet("jsmol_reference", Info_reference);
           </script>
-        -->
-          <img id="modelo_estatico" src="imgs/batracoisa_0.png"/>
+       
+          <!-- <img id="modelo_estatico" src="imgs/batracoisa_0.png"/> -->
         </td>
         <td id="tdCenter">
           <div class="debug">Tempo: <output id="timer_onscreen" ></output> s</div>
