--- a/iRT.html
+++ b/iRT.html
@@ -41,6 +41,7 @@
           <button onclick="task_n=3;prepMolecula(task_n)">4</button>
           <button onclick="task_n=4;prepMolecula(task_n)">5</button>
           <button onclick="task_n=5;prepMolecula(task_n)">6</button>
+          <button onclick="task_n=6;prepMolecula(task_n)">7</button>
         </div>
         <hr>
       </nav>
