Add dynamically added buttons for task
Implement script to dinamically add buttons based on number of tasks named in task_list variable.
Delete old list of buttons in iRT.html

--- a/iRT.html
+++ b/iRT.html
@@ -34,15 +34,9 @@
           <!-- <li><a href="#tab3">Gráfico</a></li> WIP -->
           <!-- <li><a href="#tab_tabela">Tabela</a></li> WIP -->
         </ul>
-        <div> <!-- iniciar as diferentes tarefas do teste interativo-->
-          <button onclick="task_n=0;prepMolecula(task_n)">1</button>
-          <button onclick="task_n=1;prepMolecula(task_n)">2</button>
-          <button onclick="task_n=2;prepMolecula(task_n)">3</button>
-          <button onclick="task_n=3;prepMolecula(task_n)">4</button>
-          <button onclick="task_n=4;prepMolecula(task_n)">5</button>
-          <button onclick="task_n=5;prepMolecula(task_n)">6</button>
-          <button onclick="task_n=6;prepMolecula(task_n)">7</button>
-        </div>
+        <br>
+        <!-- iniciar as diferentes tarefas do teste interativo-->
+        <div id="button-container"></div>
         <hr>
       </nav>
     </div>
