Change form parameters for clarity

--- a/iRT.html
+++ b/iRT.html
@@ -56,11 +56,11 @@
         <input name="task_id" type="hidden" id="task_id" >
         <input name="px:angstrom" type="hidden" id="px:angstrom" >
         <input name="ft" type="hidden" id="ft" >
-        <input name="fd" type="hidden" id="fd" >
-        <input name="fx" type="hidden" id="fx" >
-        <input name="fy" type="hidden" id="fy" >
-        <input name="fz" type="hidden" id="fz" >
-        <input name="fw" type="hidden" id="fw" >
+        <input name="fDuration" type="hidden" id="fDuration" >
+        <input name="fQi" type="hidden" id="fQk" >
+        <input name="fQj" type="hidden" id="fQj" >
+        <input name="fQk" type="hidden" id="fQi" >
+        <input name="fQr" type="hidden" id="fQr" >
       </form>
       <button onclick="nextStage();prepMolecula(task_n)">Próximo</button>
     </div>
