--- a/iRT.html
+++ b/iRT.html
@@ -53,14 +53,14 @@
         <!-- talvez adicionar opção auto, que tenta salvar local se online não deu certo -->
         
         <!-- valores internos a serem enviados pelo forms -->
-        <input name="task_id" type="hidden" id="task_id" >
-        <input name="px:angstrom" type="hidden" id="px:angstrom" >
-        <input name="ft" type="hidden" id="ft" >
-        <input name="fDuration" type="hidden" id="fDuration" >
-        <input name="fQi" type="hidden" id="fQk" >
-        <input name="fQj" type="hidden" id="fQj" >
-        <input name="fQk" type="hidden" id="fQi" >
-        <input name="fQr" type="hidden" id="fQr" >
+        <input type="hidden" name="task_id">
+        <input type="hidden" name="pxAngstRatio">
+        <input type="hidden" name="epoch">
+        <input type="hidden" name="duration">
+        <input type="hidden" name="fQi">
+        <input type="hidden" name="fQj">
+        <input type="hidden" name="fQk">
+        <input type="hidden" name="fQr">
       </form>
       <button onclick="nextStage();prepMolecula(task_n)">Próximo</button>
     </div>
@@ -107,7 +107,7 @@
 
   <br>
   <div style="position:sticky; bottom:0; font-size:x-small; ">
-    Updated 01/03/2023
+    Updated 04/03/2023
   </div>
   <script src="scripts.js"></script> <!--precisa carregar por último, usa alguns elementos da própria página-->
 </body>
