--- a/iRT.html
+++ b/iRT.html
@@ -18,7 +18,7 @@
   <!-- <section class="w3-container w3-center w3-animate-opacity"> -->
   <section id="tab_navigation" class="debug">
     <div style="background:#404070">
-      Você está no modo debug! Se foi engano, favor clicar novamente no canto da tela, ou recarregar a página!
+      Você está no modo debug! Se foi engano, favor clicar novamente no canto da tela, ou recarregar a página e esquecer que viu isso! ;D
       <nav>
         <!-- webpage Links -->
         <a href="rodrigocns.github.io">
@@ -32,7 +32,6 @@
           <li><a href="#tab_form">Forms</a></li>
           <li><a href="#tab_teste">Teste</a></li>
           <!-- <li><a href="#tab3">Gráfico</a></li> WIP -->
-          <!-- <li><a href="#tab_tabela">Tabela</a></li> WIP -->
         </ul>
         <!-- iniciar as diferentes tarefas do teste interativo-->
         <div id="button-container"></div>
