--- a/iRT.html
+++ b/iRT.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <title>iRT - interactive Rotation Tasks</title>
   <link rel="stylesheet" href="css/screen.css" type="text/css" >
-  <link rel="stylesheet" href="css/w3.css">
+  <link rel="stylesheet" href="css/w3.css"> <!--entender como funciona e fazer a minha versão-->
   <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
   <script type="text/javascript" src="object_configs.js"></script>
   
@@ -17,17 +17,19 @@
   <div style="text-align:right"><span id="debug_switch" style="color:#404040" onclick="debug()">Debug</span></div>
   <!-- <section class="w3-container w3-center w3-animate-opacity"> -->
   <section id="tab_navigation" class="debug">
-    <div style="background:#404070">
+    <!-- <div style="background:#404070"> -->
+    <div class="dev-div">
       Você está no modo debug! Se foi engano, favor clicar novamente no canto da tela, ou recarregar a página e esquecer que viu isso! ;D
+      <br>
+      <!-- webpage Links -->
+      <a class="dev-div" href="rodrigocns.github.io">
+      Home</a>
+      <a class="dev-div" href="https://script.google.com/home/projects/1L21yINxKMX5ngrT7JYiIOuATQeicxtVxDmKmXGD_rSoaXtIG8n0nrACp/deployments/AKfycbxtKza8SDt27Ik39cktDyv66dD2Lt77vERuHWOVEnraLH91kQwBl1r2bPQoD8Gi1BZW">
+      AppScript</a> 
+      <a class="dev-div" href="https://docs.google.com/spreadsheets/d/1LSDoA22scyWVJUDlwudKqX0o86w5b-Ds-lGOhRBGYis/edit#gid=0">
+      Gsheets</a>
+      <!-- section navigation buttons -->
       <nav>
-        <!-- webpage Links -->
-        <a href="rodrigocns.github.io">
-          Home</a>&nbsp <!--espaço em branco-->
-        <a href="https://script.google.com/home/projects/1L21yINxKMX5ngrT7JYiIOuATQeicxtVxDmKmXGD_rSoaXtIG8n0nrACp/deployments/AKfycbxtKza8SDt27Ik39cktDyv66dD2Lt77vERuHWOVEnraLH91kQwBl1r2bPQoD8Gi1BZW">
-          AppScript</a>&nbsp 
-        <a href="https://docs.google.com/spreadsheets/d/1LSDoA22scyWVJUDlwudKqX0o86w5b-Ds-lGOhRBGYis/edit#gid=0">
-          Gsheets</a>
-        <!-- section navigation buttons -->
         <ul>
           <li><a href="#tab_form">Forms</a></li>
           <li><a href="#tab_teste">Teste</a></li>
