--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
 </head>
 
 <body>
+  <div style="text-align:right"><span id="debug_switch" style="color:#404040" onclick="debug()">Debug</span></div>
   <br>
   <h1><a href="https://rodrigocns.github.io">Página de rodrigocns</a></h1>
   <p>Hospedado por GitHub Pages @ <a href="https://github.com/rodrigocns/rodrigocns.github.io">rodrigocns.github.io</a>    :)</p>
   <br><br><br>
-  <div>
-    <h2>iRT - interactive Rotations Test</h2>
-    <br>
-    <a href="iRT.html">Clique aqui!</a> (salvo online e/ou offline).
-    <br>
-    <br>
-    <br>
+  <h2>iRT - interactive Rotations Test</h2>
+    <div style="max-width:50%; margin:0 auto">
+      Sequência de tarefas interativas relacionadas à <a href="https://pt.wikipedia.org/wiki/Intelig%C3%AAncias_m%C3%BAltiplas#Espacial">
+        inteligência espacial</a>
+      (ou spatial ability), para fins acadêmicos. Ainda em constante desenvolvimento mas já funcional.
+      <br>
+      Acesse a página <a href="iRT.html">
+        aqui</a>.
+      
+
+      
+    </div>    
+  <div class="debug">
     <h2>Arquivo/Misc.</h2>
     <a href="task_pre-git(OLD).html">Versão manual</a> (2020?)
     <a href="task_online(2022).html">iRT online</a> (2022)
     <a href="teste.html">Teste</a>
     <a href="teste2.html">Teste2</a>
   </div>
-
 </body>
 
 </html>
