--- a/iRT.html
+++ b/iRT.html
@@ -100,15 +100,15 @@
     
   </section>
   <section id="tab_fim" class="stage" style="display:none"> <!-- Texto de agradecimento e etc. -->
-    Texto final de agradecimento.
-    "Muito obrigado por realizar o teste! (WIP)"
+    "Muito obrigado por participar da pesquisa! (WIP)"
+    Quaisquer dúvidas, envie emails para rodrigoconsoli@gmail.com
     <br><br><br><br>
   </section>
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Pular estágio</button>
 
   <br>
   <div style="position:sticky; bottom:0; font-size:x-small; ">
-    Updated 04/03/2023
+    Updated 06/03/2023
   </div>
   <script src="scripts.js"></script> <!--precisa carregar por último, usa alguns elementos da própria página-->
 </body>
