--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <link rel="stylesheet" href="css/screen.css" />
 </head>
 
-<body>
+<body style="font-size:1em">
   <div style="text-align:right"><span id="debug_switch" style="color:#404040" onclick="debug()">Debug</span></div>
   <br>
   <h1><a href="https://rodrigocns.github.io">Página de rodrigocns</a></h1>
-  <p>Hospedado por GitHub Pages @ <a href="https://github.com/rodrigocns/rodrigocns.github.io">rodrigocns.github.io</a>    :)</p>
+  <span style="font-size:1.5em">Hospedado por GitHub Pages @ <a href="https://github.com/rodrigocns/rodrigocns.github.io">rodrigocns.github.io</a>    :) </span>
   <br><br><br>
   <h2>iRT - interactive Rotations Test</h2>
-    <div style="max-width:50%; margin:0 auto">
+    <div style="max-width:80%; font-size:1.5em; margin:0 auto">
       Sequência de tarefas interativas relacionadas à <a href="https://pt.wikipedia.org/wiki/Intelig%C3%AAncias_m%C3%BAltiplas#Espacial">
         inteligência espacial</a>
-      (ou spatial ability), para fins acadêmicos. Ainda em constante desenvolvimento mas já funcional.
+      (ou <i>spatial ability</i>), para fins acadêmicos. Ainda em constante desenvolvimento mas já funcional.
       <br>
       Acesse a página <a href="iRT.html">
         aqui</a>.
