--- a/iRT.html
+++ b/iRT.html
@@ -53,9 +53,11 @@
         <!-- talvez adicionar opção auto, que tenta salvar local se online não deu certo -->
         
         <!-- valores internos a serem enviados pelo forms -->
+        <!-- Precisa mudar aqui e no scripts.js -->
         <input type="hidden" name="task_id">
         <input type="hidden" name="pxAngstRatio">
-        <input type="hidden" name="epoch">
+        <input type="hidden" name="epochStart">
+        <input type="hidden" name="epochArr">
         <input type="hidden" name="duration">
         <input type="hidden" name="fQi">
         <input type="hidden" name="fQj">
@@ -107,7 +109,7 @@
 
   <br>
   <div style="position:sticky; bottom:0; font-size:x-small; ">
-    Updated 06/03/2023
+    Updated 01/04/2023
   </div>
   <script src="scripts.js"></script> <!--precisa carregar por último, usa alguns elementos da própria página-->
 </body>
