--- a/iRT.html
+++ b/iRT.html
@@ -48,9 +48,9 @@
         <br><br>
         
         <!-- Template: Texto no Html: <input name="header da coluna no gsheets" type="tipo do input"> -->
-        Nome: <input name="fname" type="text" placeholder="Ex: Rodrigo Alves" size="30" autofocus><br>
+        Name: <input name="fname" type="text" placeholder="Ex: Rodrigo Alves" size="30" autofocus><br>
         Email: <input name="email" type="email" placeholder="Ex: rodrigo@gmail.com" size="30"><br>
-        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Salvar cópia local dos dados<br>
+        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Download local copy of data<br>
         <!-- talvez adicionar opção auto, que tenta salvar local se online não deu certo -->
         
         <!-- valores internos a serem enviados pelo forms -->
