--- a/iRT.html
+++ b/iRT.html
@@ -79,10 +79,10 @@
           </script>
         </td>
         <td id="tdCenter">
-          When starting each task, you must rotate the right object until it is as close as you can get to the left object, and then click the 'DONE' button!  
-          When ready, click the 'GO!' button to start.
+          When starting each task, you must rotate the object on the right until it is as close as you can get to the object on the left, and then click the 'DONE' button!  
+          When ready, click the 'GO!' button for the objects to appear and start the task.
           <br>
-          <div class="debug">Tempo: <output id="timer_onscreen" ></output> s</div>
+          <div class="debug">Duration: <output id="timer_onscreen" ></output> s</div>
           <br><button class="debug" onclick="tamanhoJanela()">scrSize</button>
           <br><button class="debug" onclick="botaoSubmit()">!POST</button>
           <br><button class="debug" onclick="timerStop()">timerStop</button>
