--- a/iRT.html
+++ b/iRT.html
@@ -50,7 +50,7 @@
         <!-- Template: Texto no Html: <input name="header da coluna no gsheets" type="tipo do input"> -->
         Name: <input name="fname" type="text" placeholder="Ex: Rodrigo Alves" size="30" autofocus><br>
         Email: <input name="email" type="email" placeholder="Ex: rodrigo@gmail.com" size="30"><br>
-        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Download local copy of data<br>
+        <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Download backup copy of data<br>
         <!-- talvez adicionar opção auto, que tenta salvar local se online não deu certo -->
         
         <!-- valores internos a serem enviados pelo forms -->
