--- a/iRT.html
+++ b/iRT.html
@@ -110,8 +110,10 @@
     
   </section>
   <section id="tab_fim" class="stage" style="display:none"> <!-- Texto de agradecimento e etc. -->
-    "Muito obrigado por participar da pesquisa! (WIP)"
-    Quaisquer dúvidas, envie emails para rodrigoconsoli@gmail.com
+    "Muito obrigado por participar da nossa pesquisa!"
+    "Thank you for participating in our research!"
+
+    Contact: rodrigoconsoli@gmail.com
     <br><br><br><br>
   </section>
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Pular estágio</button>
