Implement Screen size data upload

--- a/iRT.html
+++ b/iRT.html
@@ -70,6 +70,8 @@
         <input type="hidden" name="fQj">
         <input type="hidden" name="fQk">
         <input type="hidden" name="fQr">
+        <input type="hidden" name="scrSizeX">
+        <input type="hidden" name="scrSizeY">
       </form>
     </div>
     <button onclick="nextStage();prepMolecula(task_n);openFullscreen()">Next</button>
