--- a/iRT.html
+++ b/iRT.html
@@ -53,10 +53,10 @@
         <input id="save_check" type="checkbox" onchange="localSaveSwitch(this)"> Download backup copy of data<br>
         <br>
         <!-- talvez adicionar opção auto, que tenta salvar local se online não deu certo -->
-        In the next section you will perform 3 rotation tasks. When you click on the 'GO!'
-         button, two objects will appear in opposite corners of the screen. The goal is to
-         rotate the object on the right until you get it as close as possible to the object 
-         on the left. To rotate it, simply drag the mouse over the object.  When you finish 
+        In the next section you will perform three rotation tasks. When you click on the 'GO!'
+         button, two objects will appear in opposite corners of the screen. Your goal is to rotate
+         the object on the right until it closely matches the object on the left as best as you can.
+         To rotate the object, click and drag your mouse over it.  When you finish 
          each of the 3 tasks, click on the 'DONE!' button to continue.
         <!-- valores internos a serem enviados pelo forms -->
         <!-- Precisa mudar aqui e no scripts.js -->
