--- a/iRT.html
+++ b/iRT.html
@@ -58,6 +58,13 @@
          the object on the right until it closely matches the object on the left as best as you can.
          To rotate the object, click and drag your mouse over it.  When you finish 
          each of the 3 tasks, click on the 'DONE!' button to continue.
+        <!--
+          In the next section you will perform three rotation tasks. When you click on the 'GO!'
+        button, two objects will appear in opposite corners of the screen. Your goal is to rotate
+        the object on the right until it closely matches the object on the left as best as you can.
+        To rotate the object, click and drag your mouse over it.  When you finish 
+        each of the 3 tasks, click on the 'DONE!' button to continue.
+        -->
         <!-- valores internos a serem enviados pelo forms -->
         <!-- Precisa mudar aqui e no scripts.js -->
         <input type="hidden" name="sessionID">
