--- a/iRT.html
+++ b/iRT.html
@@ -72,6 +72,10 @@
         <input type="hidden" name="fQj">
         <input type="hidden" name="fQk">
         <input type="hidden" name="fQr">
+        <input type="hidden" name="ref_i">
+        <input type="hidden" name="ref_j">
+        <input type="hidden" name="ref_k">
+        <input type="hidden" name="ref_r">
         <input type="hidden" name="scrSizeX">
         <input type="hidden" name="scrSizeY">
       </form>
