Update iRT html and script code
Add browser/OS info to google sheets form

--- a/iRT.html
+++ b/iRT.html
@@ -78,6 +78,7 @@
         <input type="hidden" name="ref_r">
         <input type="hidden" name="scrSizeX">
         <input type="hidden" name="scrSizeY">
+        <input type="hidden" name="browser">
       </form>
     </div>
     <button onclick="nextStage();prepMolecula(task_n);openFullscreen()">Next</button>
