Update iRT html and script code
Add 3D model fileName to google sheets form

--- a/iRT.html
+++ b/iRT.html
@@ -79,6 +79,7 @@
         <input type="hidden" name="scrSizeX">
         <input type="hidden" name="scrSizeY">
         <input type="hidden" name="browser">
+        <input type="hidden" name="modelName">
       </form>
     </div>
     <button onclick="nextStage();prepMolecula(task_n);openFullscreen()">Next</button>
