--- a/iRT.html
+++ b/iRT.html
@@ -78,6 +78,14 @@
         <input type="hidden" name="ref_r">
         <input type="hidden" name="scrSizeX">
         <input type="hidden" name="scrSizeY">
+        <input type="hidden" name="cvsRefTop">
+        <input type="hidden" name="cvsRefRight">
+        <input type="hidden" name="cvsRefBottom">
+        <input type="hidden" name="cvsRefLeft">
+        <input type="hidden" name="cvsIntTop">
+        <input type="hidden" name="cvsIntRight">
+        <input type="hidden" name="cvsIntBottom">
+        <input type="hidden" name="cvsIntLeft">
         <input type="hidden" name="browser">
         <input type="hidden" name="modelName">
       </form>
@@ -86,7 +94,6 @@
   </section>
   <section id="tab_teste" class="stage" style="display:none">  <!-- Tarefas interativas JSmol -->
     <div class="debug" id="indicador_orientacao" style="background-color:gray">Test</div> <!--coordenadas de orientacao-->
-
 
     <table id="iRT_canvas_table"> <!--as bordas em css ajudam na formatacao, posso tirar no final-->
       <tr>
@@ -136,7 +143,7 @@
 
   <br>
   <div style="position:sticky; bottom:0; font-size:x-small; ">
-    Updated 10/05/2023
+    Updated 23/05/2023
   </div>
   <script src="scripts.js"></script> <!--precisa carregar por último, usa alguns elementos da própria página-->
 </body>
