Add pxRatio to form
pxRatio is how much "real pixels" there are inside a screen pixel

--- a/iRT.html
+++ b/iRT.html
@@ -86,6 +86,7 @@
         <input type="hidden" name="cvsIntRight">
         <input type="hidden" name="cvsIntBottom">
         <input type="hidden" name="cvsIntLeft">
+        <input type="hidden" name="pxRatio">
         <input type="hidden" name="browser">
         <input type="hidden" name="modelName">
       </form>
