--- a/iRT.html
+++ b/iRT.html
@@ -61,7 +61,7 @@
         <!-- internal values to be sent by forms -->
         <!-- need to change here and in scripts.js -->
         <input type="hidden" name="sessionID">
-        <input type="hidden" name="task_id">
+        <input type="hidden" name="taskID">
         <input type="hidden" name="pxAngstRatio">
         <input type="hidden" name="epochStart">
         <input type="hidden" name="epochArr">
