--- a/iRT_JoVE.html
+++ b/iRT_JoVE.html
@@ -6,7 +6,7 @@
   <title>iRT - interactive Rotation Tasks</title>
   <link rel="stylesheet" href="css/screen.css" type="text/css" >
   <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
-  <script type="text/javascript" src="object_configs.js"></script>
+  <script type="text/javascript" src="javascript/object_configs.js"></script>
   
 </head>
 
@@ -136,6 +136,8 @@
     "Muito obrigado por participar da nossa pesquisa!"
     "Thank you for taking part in our research!"
 
+    rodrigo.consoli@alumni.usp.br
+
     <br><br><br><br>
   </section>
   <button class="debug" id="next_stage_button_debug" onclick="nextStage()">Next stage</button>
@@ -144,6 +146,6 @@
   <div style="position:sticky; bottom:0; font-size:x-small; ">
     Updated 29/05/2023
   </div>
-  <script src="scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
+  <script src="javascript/scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
 </body>
 </html>
