--- a/iRT_JoVE.html
+++ b/iRT_JoVE.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>iRT - interactive Rotation Tasks</title>
-  <link rel="stylesheet" href="css/screen.css" type="text/css" >
+  <link rel="stylesheet" href="JoVE/css/screen.css" type="text/css" >
   <script type="text/javascript" src="jsmol/JSmol.min.js"></script>
-  <script type="text/javascript" src="javascript/object_configs.js"></script>
+  <script type="text/javascript" src="JoVE/javascript/object_configs.js"></script>
   
 </head>
 
@@ -20,11 +20,9 @@
       You are in debug mode! If this was a mistake, please click again in the corner of the screen, or reload the page and forget you saw this! ;D
       <br>
       <!-- webpage Links -->
-      <a class="dev-div" href="rodrigocns.github.io">
-      Home</a>
-      <a class="dev-div" href="https://script.google.com/home/projects/1L21yINxKMX5ngrT7JYiIOuATQeicxtVxDmKmXGD_rSoaXtIG8n0nrACp/deployments/AKfycbxtKza8SDt27Ik39cktDyv66dD2Lt77vERuHWOVEnraLH91kQwBl1r2bPQoD8Gi1BZW">
+      <a class="dev-div" href="https://script.google.com/home/">
       AppScript</a> 
-      <a class="dev-div" href="https://docs.google.com/spreadsheets/d/1LSDoA22scyWVJUDlwudKqX0o86w5b-Ds-lGOhRBGYis/edit#gid=0">
+      <a class="dev-div" href="https://docs.google.com/spreadsheets/">
       Gsheets</a>
       <!-- section navigation buttons -->
       <nav>
@@ -133,9 +131,9 @@
     
   </section>
   <section id="tab_fim" class="stage" style="display:none"> <!-- Final words -->
-    "Muito obrigado por participar da nossa pesquisa!"
-    "Thank you for taking part in our research!"
-
+    "Muito obrigado por participar da nossa pesquisa!"<br>
+    "Thank you for taking part in our research!"<br>
+    <br>
     rodrigo.consoli@alumni.usp.br
 
     <br><br><br><br>
@@ -146,6 +144,6 @@
   <div style="position:sticky; bottom:0; font-size:x-small; ">
     Updated 29/05/2023
   </div>
-  <script src="javascript/scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
+  <script src="JoVE/javascript/scripts.js"></script> <!--needs to load last, uses some elements from the page itself-->
 </body>
 </html>
