--- a/iRT.html
+++ b/iRT.html
@@ -133,9 +133,9 @@
     
   </section>
   <section id="tab_fim" class="stage" style="display:none"> <!-- Final words -->
-    "Muito obrigado por participar da nossa pesquisa!"
-    "Thank you for taking part in our research!"
-
+    "Muito obrigado por participar da nossa pesquisa!"<br>
+    "Thank you for taking part in our research!"<br>
+    <br>
     rodrigo.consoli@alumni.usp.br
 
     <br><br><br><br>
