--- a/iRT.html
+++ b/iRT.html
@@ -116,13 +116,22 @@
           <button class="debug" onclick="saveFile()">Save Data Localy</button>
           <button class="debug" onclick="pixelAngstromRatio(randXYZ(jsmolInteractiveObject),jsmolInteractiveObject,1)">px:Angst</button>
           <button class="debug" onclick="Jmol.script(jsmolInteractiveObject,'console')">console</button>
-          <button class="debug" onclick="load_lin(jsmolInteractiveObject)">Load linear</button>
-          <button class="debug" onclick="load_seg(jsmolInteractiveObject)">Load segment</button>
-          <button class="debug" onclick="load_per(jsmolInteractiveObject)">Load perimeter</button>
-          <button class="debug" onclick="load_per2(jsmolInteractiveObject)">Load perimeter</button>
-          <button class="debug" onclick="load_fac(jsmolInteractiveObject)">Load faces</button>
+          <br><br>
+          <button class="debug" onclick="load_lin(jsmolInteractiveObject)">linear</button>
+          <button class="debug" onclick="load_lin_mirror(jsmolInteractiveObject)">linear m</button>
+          <button class="debug" onclick="load_seg(jsmolInteractiveObject)">segment</button>
+          <button class="debug" onclick="load_seg_mirror(jsmolInteractiveObject)">segment m</button>
+          <button class="debug" onclick="load_per(jsmolInteractiveObject)">perimeter</button>
+          <button class="debug" onclick="load_per_mirror(jsmolInteractiveObject)">perimeter m</button>
+          <button class="debug" onclick="load_per2(jsmolInteractiveObject)">perimeter2</button>
+          <button class="debug" onclick="load_per2_mirror(jsmolInteractiveObject)">perimeter2 m</button>
+          <button class="debug" onclick="load_fac(jsmolInteractiveObject)">faces</button>
+          <button class="debug" onclick="load_fac_mirror(jsmolInteractiveObject)">faces m</button>
+          <br><br>
           <button class="debug" onclick="Jmol.script(jsmolInteractiveObject, 'select *; color gray;' )">gray</button>
           <button class="debug" onclick="Jmol.script(jsmolInteractiveObject, 'select *; color cpk;' )">cpk</button>
+          <button class="debug" onclick="Jmol.script(jsmolInteractiveObject, 'moveTo 0 QUATERNION {0.6249 -0.0366 -0.6990 -0.3458}')">startPosStd</button>
+          <button class="debug" onclick="Jmol.script(jsmolInteractiveObject, 'moveTo 0 quaternion {0.7910  0.3605  0.4065  0.2812}')">startPosNew</button>
           
           <div>
             <button id="endTasksButton" onclick="nextStage();closeFullscreen()" style="visibility:hidden">Next</button>
